--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
     <title>Exercise 1</title>
 </head>
 <body>
-
+    <header class="header">
+        <input type="checkbox" id="open-menu">
+        <label for="open-menu" role="button" class="header__open-nav-button">=</label>
+        <div class="header__logo-container">
+            <img src="images/ada13logo.png" alt="Logo de la empresa" class="header__logo">
+        </div>
+        <nav class="header__nav">
+            <ul class="header__nav-list">
+                <li class="header__nav-item"><a href="#">About</a></li>
+                <li class="header__nav-item"><a href="#">Portfolio</a></li>
+                <li class="header__nav-item"><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
