Adding a class for the input "checkbox" like "header__checkbox" and creating the style CSS for the navbar and heading website only for the phone resolution

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="header">
-        <input type="checkbox" id="open-menu">
+        <input type="checkbox" class="header__checkbox" id="open-menu">
         <label for="open-menu" role="button" class="header__open-nav-button">=</label>
         <div class="header__logo-container">
             <img src="images/ada13logo.png" alt="Logo de la empresa" class="header__logo">
