--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Exercise 1</title>
 </head>
 <body>
+    <!-- HEADER SECTION -->
     <header class="header">
         <input type="checkbox" class="header__checkbox" id="open-menu">
         <label for="open-menu" role="button" class="header__open-nav-button">=</label>
@@ -21,5 +22,60 @@
             </ul>
         </nav>
     </header>
+    <!-- HEADER ENDS -->
+
+    <!-- MAIN SECTION -->
+    <main class="profile">
+        <div class="profile__wrapper">
+            <div class="profile__img-container">
+                <img src="images/PERFIL 4.webp" alt="">
+            </div>
+            <div class="profile__data-container">
+                <div class="profile__data">
+                    <div class="profile__description">
+                        <h1>Who is Daniel Acosta?</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, dolore a? Similique sint soluta harum eos aliquam debitis odio cum deleniti cumque unde accusantium amet expedita, sequi illo suscipit alias!
+                        </p>
+                    </div>
+                    <div class="profile__skills-container">
+                        <h2>Skills</h2>
+                        <ul>
+                            <li class="profile__skill">
+                                <div class="load__bar">
+                                    <div class="load-bar__bar bar--80">80%</div>
+                                </div>
+                                <span class="profile__skill-name">HTMl</span>
+                            </li>
+                            <li class="profile__skill">
+                                <div class="load__bar">
+                                    <div class="load-bar__bar bar--60">60%</div>
+                                </div>
+                                <span class="profile__skill-name">CSS</span>
+                            </li>
+                            <li class="profile__skill">
+                                <div class="load__bar">
+                                    <div class="load-bar__bar bar--70">70%</div>
+                                </div>
+                                <span class="profile__skill-name">JS</span>
+                            </li>
+                            <li class="profile__skill">
+                                <div class="load__bar">
+                                    <div class="load-bar__bar bar--90">90%</div>
+                                </div>
+                                <span class="profile__skill-name">SQL</span>
+                            </li>
+                            <li class="profile__skill">
+                                <div class="load__bar">
+                                    <div class="load-bar__bar bar--70">70%</div>
+                                </div>
+                                <span class="profile__skill-name">PYTHON</span>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+    <!-- MAIN ENDS -->
 </body>
 </html>
