.replace the div class for "load-bar" of every li objects.  adjust the name of the skill called "HTML". Giving styles in CSS for the main section

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <main class="profile">
         <div class="profile__wrapper">
             <div class="profile__img-container">
-                <img src="images/PERFIL 4.webp" alt="">
+                <img src="images/PERFIL 4.webp" class="profile__img" alt="">
             </div>
             <div class="profile__data-container">
                 <div class="profile__data">
@@ -41,31 +41,31 @@
                         <h2>Skills</h2>
                         <ul>
                             <li class="profile__skill">
-                                <div class="load__bar">
+                                <div class="load-bar">
                                     <div class="load-bar__bar bar--80">80%</div>
                                 </div>
-                                <span class="profile__skill-name">HTMl</span>
+                                <span class="profile__skill-name">HTML</span>
                             </li>
                             <li class="profile__skill">
-                                <div class="load__bar">
+                                <div class="load-bar">
                                     <div class="load-bar__bar bar--60">60%</div>
                                 </div>
                                 <span class="profile__skill-name">CSS</span>
                             </li>
                             <li class="profile__skill">
-                                <div class="load__bar">
+                                <div class="load-bar">
                                     <div class="load-bar__bar bar--70">70%</div>
                                 </div>
                                 <span class="profile__skill-name">JS</span>
                             </li>
                             <li class="profile__skill">
-                                <div class="load__bar">
+                                <div class="load-bar">
                                     <div class="load-bar__bar bar--90">90%</div>
                                 </div>
                                 <span class="profile__skill-name">SQL</span>
                             </li>
                             <li class="profile__skill">
-                                <div class="load__bar">
+                                <div class="load-bar">
                                     <div class="load-bar__bar bar--70">70%</div>
                                 </div>
                                 <span class="profile__skill-name">PYTHON</span>
