--- a/index.html
+++ b/index.html
@@ -77,5 +77,30 @@
         </div>
     </main>
     <!-- MAIN ENDS -->
+
+    <!-- PORTFOLIO SECTION -->
+    <section class="portfolio">
+        <h2>Portfolio Section</h2>
+        <div class="portfolio__project-container">
+            <div class="portfolio__project">
+                <h2 class="portfolio__project-name">Project</h2>
+            </div>
+            <div class="portfolio__project">
+                <h2 class="portfolio__project-name">Project</h2>
+            </div>
+            <div class="portfolio__project">
+                <h2 class="portfolio__project-name">Project</h2>
+            </div>
+            <div class="portfolio__project">
+                <h2 class="portfolio__project-name">Project</h2>
+            </div>
+            <div class="portfolio__project">
+                <h2 class="portfolio__project-name">Project</h2>
+            </div>
+            <div class="portfolio__project">
+                <h2 class="portfolio__project-name">Project</h2>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
