Creating the space in styles.css to start with the code creation to give style for the contact section. Creating the structure in index.html for the contact section.

--- a/index.html
+++ b/index.html
@@ -102,5 +102,33 @@
             </div>
         </div>
     </section>
+    <!-- PORTFOLIO ENDS -->
+
+    <!-- CONTACT SECTION -->
+    <section class="form">
+        <h2 class="form__title">Contact</h2>
+        <form action="" class="form__form">
+            <div class="form__input-container">
+                <label>Name
+                    <input type="text" placeholder="John Doe">
+                </label>
+            </div>
+            <div class="form__input-container">
+                <label>Last name
+                    <input type="text" placeholder="John Doe">
+                </label>
+            </div>
+            <div class="form__input-container">
+                <label>E-mail
+                    <input type="email" placeholder="sample@gmail.com">
+                </label>
+            </div>
+            <div class="form__input-container">
+                <label>message
+                    <textarea placeholder="John Doe"></textarea>
+                </label>
+            </div>
+        </form>
+    </section>
 </body>
 </html>
