Adding a new div with an input type submit in index.html to create a button to send the data of the contact form. Change the placeholder of textarea in the label "Message".  Replace the placeholders in the inputs called Name, Last name and email. Creating the styles code for the contact section.

--- a/index.html
+++ b/index.html
@@ -110,23 +110,26 @@
         <form action="" class="form__form">
             <div class="form__input-container">
                 <label>Name
-                    <input type="text" placeholder="John Doe">
+                    <input type="text" placeholder="John">
                 </label>
             </div>
             <div class="form__input-container">
                 <label>Last name
-                    <input type="text" placeholder="John Doe">
+                    <input type="text" placeholder="Doe">
                 </label>
             </div>
             <div class="form__input-container">
                 <label>E-mail
-                    <input type="email" placeholder="sample@gmail.com">
+                    <input type="email" placeholder="mail@example.com">
                 </label>
             </div>
             <div class="form__input-container">
-                <label>message
-                    <textarea placeholder="John Doe"></textarea>
+                <label>Message
+                    <textarea placeholder="Write here your message"></textarea>
                 </label>
+            </div>
+            <div class="form__input-container">
+                <input type="submit">
             </div>
         </form>
     </section>
