Creating the footer section on index.html.

--- a/index.html
+++ b/index.html
@@ -133,5 +133,12 @@
             </div>
         </form>
     </section>
+    <!-- CONTACT ENDS -->
+
+    <!-- FOOTER SECTION -->
+    <footer>
+        Daniel Acosta - 2024 ©
+    </footer>
+    <!-- FOOTER ENDS -->
 </body>
 </html>
