Adding a strong aroun the name "Daniel Acosta" in the footer.  Creating the footer style in styles.css

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
     <!-- FOOTER SECTION -->
     <footer>
-        Daniel Acosta - 2024 ©
+        <strong>Daniel Acosta</strong> - 2024 ©
     </footer>
     <!-- FOOTER ENDS -->
 </body>
