Adding an ID fot each section and replace each link of the header to move through the website.

--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
         </div>
         <nav class="header__nav">
             <ul class="header__nav-list">
-                <li class="header__nav-item"><a href="#">About</a></li>
-                <li class="header__nav-item"><a href="#">Portfolio</a></li>
-                <li class="header__nav-item"><a href="#">Contact</a></li>
+                <li class="header__nav-item"><a href="#profile">About</a></li>
+                <li class="header__nav-item"><a href="#portfolio">Portfolio</a></li>
+                <li class="header__nav-item"><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
     <!-- HEADER ENDS -->
 
     <!-- MAIN SECTION -->
-    <main class="profile">
+    <main id="profile" class="profile">
         <div class="profile__wrapper">
             <div class="profile__img-container">
                 <img src="images/PERFIL 4.webp" class="profile__img" alt="">
@@ -79,7 +79,7 @@
     <!-- MAIN ENDS -->
 
     <!-- PORTFOLIO SECTION -->
-    <section class="portfolio">
+    <section id="portfolio" class="portfolio">
         <h2 class="portfolio__title">Portfolio Section</h2>
         <div class="portfolio__project-container">
             <div class="portfolio__project">
@@ -105,7 +105,7 @@
     <!-- PORTFOLIO ENDS -->
 
     <!-- CONTACT SECTION -->
-    <section class="form">
+    <section id="contact" class="form">
         <h2 class="form__title">Contact</h2>
         <form action="" class="form__form">
             <div class="form__input-container">
